# vulkan-cmake-app

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindVulkan.cmake
docs/: getting_started.md
include/: Camera.hpp  CameraConstants.hpp  CameraController.hpp  GridRenderer.hpp  InputSystem.hpp  TriangleRenderer.hpp  VkApp.hpp  VulkanCore.hpp  VulkanSwapchain.hpp  vk_app.hpp
shaders/: Grid.slang  triangle.frag  triangle.slang
src/: VkApp.cpp  app.cpp  main.cpp  renderer.cpp
src/core/: Camera.cpp  CameraController.cpp  InputSystem.cpp  VulkanCore.cpp  VulkanSwapchain.cpp
src/renderer/: GridRenderer.cpp  TriangleRenderer.cpp
tests/: test_renderer.cpp
